cilium-cli/connectivity/manifests/allow-all-except-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-except-world
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - host
    - remote-node
    - cluster
    - init
    - health
    - kube-apiserver
  - toEndpoints:
      - {}
  # When node-local-dns is deployed with local IP,
  # Cilium labels its ip as world.
  # This change prevents failing the connectivity
  # test for such environments.
  - toPorts:
      - ports:
          - port: "53"
            protocol: UDP
    toEntities:
      - world
  ingress:
  - fromEntities:
    - host
    - remote-node
    - cluster
    - init
    - health
    - kube-apiserver
  - fromEndpoints:
    - {}
